# advanced_python

./: .gitignore  README.md  pyproject.toml
src/adv/: csv_reader.py  interfaces.py  main.py  model.py  parser.py  service.py
tests/: test_csv_reader.py  test_parser.py
