[project]
name = "adv"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Orlowska",email = "anna.s.orlowska@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "adv", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
